# devport-cli

./: .gitignore  .mcp.json  CHANGELOG.md  Cargo.toml  INSTALL.md  README.md  install.sh
mcp-server/: AI_SETUP.md  README.md  index.js  package.json  test.sh
src/: main.rs
