[package]
name = "devport-cli"
version = "0.1.0"
edition = "2021"
authors = ["Brent Dietrich"]
description = "A TUI for managing local development ports and services"

[[bin]]
name = "devport"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
sysinfo = "0.32"
libc = "0.2"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
